--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
